# AI-Ticket-Resolver

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  env.py  grader.py  models.py  tasks.py
server/: app.py
static/: index.html  style.css
