[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ticket-resolver"
version = "0.1.0"
description = "AI Customer Support Ticket Resolver (OpenEnv)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-multipart",
    "python-dotenv",
    "openai",
    "openenv-core"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["env", "server"]
